# ml-tree-plainer

./: .gitignore  CMakeLists.txt  MLTPLinkDef.h  README.md  debug.sh  example_config.json  export.sh  filelist.txt  filelist_test.txt  intermediate_tree.root  json_sandbox.ipynb  out.root  plain_job.sh  run.sh  sketch.hpp  submit_plain_job_train.sh  submit_plain_job_validate.sh  test.sh
at_tree_plainer/: ATPLinkDef.h  ATreePlainer.cpp  ATreePlainer.hpp  CMakeLists.txt
ml_tree_plainer/: ATPConfig.cmake.in  CMakeLists.txt  MLTPConfig.cmake.in  MlTPLinkDef.h  MlTreePlainer.cpp  MlTreePlainer.hpp  README.md  main.cpp
scripts/: plain_job.sh  submit_job.sh
scripts/configs/: filelist.txt  filelist_local.txt  tof-trd-primaries.json
src/: ATTPBranch.cpp  ATTPBranch.hpp  ATTPConfig.cmake.in  ATTPConfigParser.cpp  ATTPConfigParser.hpp  ATTPVariable.cpp  ATTPVariable.hpp  AtTreePlainer.cpp  AtTreePlainer.hpp  MLTPBranch.cpp  MLTPBranch.hpp  MLTPConfigParser.cpp  MLTPConfigParser.hpp  MLTPVariable.cpp  MLTPVariable.hpp  MlTreePlainer.cpp  MlTreePlainer.hpp  config_at.txt  main.cpp
